# tech-report-aurora-hpc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pdflatex.yml  unit-tests.yml
baskerville/dawn-comparison/: README.md  batch-comparison.sh  batch-inference-timing.sh  batch-srun.sh  compare-results.py  download.py  inference-timing.py
baskerville/era5-experiments/: README.md  batch-download.sh  batch-finetune-aligned.sh  batch-finetune-ddp.sh  batch-finetune-fsdp.sh  batch-finetune-small.sh  batch-finetune.sh  batch-runmodel.sh  batch-srun.sh  download.py  finetune-aligned.py  finetune-ddp.py  finetune-fsdp.py  finetune-small.py  finetune.py  runmodel.py
calculations/: calculate.py  plot.py  requirements.txt
calculations/batch/: bask-local-calcs.sh  bask-local-plot.sh  bask-srun-calcs.sh  bask-srun-plot.sh  dawn-local-calcs.sh  dawn-srun-calcs-composite.sh  dawn-srun-calcs-flat.sh  dawn-srun-calcs.sh
dawn/batch/: dawn-download-era5.sh  inference.sh
dawn/scripts/: era_v_download.py  inference.py
documents/tech-report/: Makefile  README.md  bibliography.bib  body.tex  main.tex  main.toc  styles.tex  ttr.sty
src/aurora_hpc/: aurora_loss.py  dataset.py  env_utils.py  era5info.py
tests/: test_aurora_loss.py  test_dataset.py  test_env_utils.py
train/: README.md
train/batch/: bask-srun-diskbw.sh  bask-srun-gpubw.sh  bask-srun-train-fsdp.sh  bask-train-fsdp-1x1.sh  bask-train-fsdp-1x4.sh  bask-train-fsdp-2x4.sh  bask-train-fsdp-2x8.sh  bask-train-fsdp-4x4.sh  bask-train-fsdp.sh  dawn-create-venv.sh  dawn-train-ddp-1x1.sh  dawn-train-ddp-1x4.sh  (+6 more)
(+34 files in other folders)
